# gazelle_kt

./: BUILD  MODULE.bazel  README.md  go.mod  go.sum
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
kotlin/: BUILD  resolver.go
kotlin/kotlinconfig/: BUILD.bazel
kotlin/parser/: BUILD.bazel
patches/: aspect-cli.cgo-binding.patch  aspect-cli.only-kotlin.patch
tools/: BUILD  gazelle.bzl  tools.lock.json  unused.go
