load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = ["parser.go"],
    importpath = "github.com/aspect-build/gazelle_kt/kotlin/parser",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aspect_build_aspect_cli//gazelle/common/treesitter",
        "@com_github_aspect_build_aspect_cli//pkg/logger",
    ],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
)
